tests/netconvert/errors/aggregate/errors.netconvert
Error: Type 'highway.cycleway' used by edge '-411031867' was not defined (ignore with option --ignore-errors.edge-type).
Error: Additional lane information could not be set - the edge with id '-411031867s' is not known.
Error: Type 'railway.tram' used by edge '226356742#0' was not defined (ignore with option --ignore-errors.edge-type).
Error: Additional lane information could not be set - the edge with id '226356742#0s' is not known.
Error: Type 'highway.tertiary' used by edge '421641052#1' was not defined (ignore with option --ignore-errors.edge-type).
Error: Additional lane information could not be set - the edge with id '421641052#1s' is not known.
Error: Additional lane information could not be set - the edge with id '421641052#1s' is not known.
Error: Type 'highway.secondary' used by edge '60062720#2' was not defined (ignore with option --ignore-errors.edge-type).
Error: Additional lane information could not be set - the edge with id '60062720#2s' is not known.
Error: Additional lane information could not be set - the edge with id '60062720#2s' is not known.
Error: Additional lane information could not be set - the edge with id '60062720#2s' is not known.
Error: Type 'highway.pedestrian' used by edge '651826250#4' was not defined (ignore with option --ignore-errors.edge-type).
Error: Additional lane information could not be set - the edge with id '651826250#4s' is not known.
Error: Type 'cycleway.lane|highway.tertiary' used by edge '7525914#1' was not defined (ignore with option --ignore-errors.edge-type).
Error: Additional lane information could not be set - the edge with id '7525914#1s' is not known.
Error: Additional lane information could not be set - the edge with id '7525914#1s' is not known.
Error: Additional lane information could not be set - the edge with id '7525914#1s' is not known.
Quitting (on error).
